input/v1.9.0/applications/install-and-publish-an-application.md
---
title: "Install and publish an application"
excerpt: ""
---
[block:callout]
{
  "type": "danger",
  "title": "This feature is only available for administrators!"
}
[/block]
1. [Launch the VDI](doc:launch-the-virtual-desktop-vdi).
2. Click :fa-circle: to start the recording of the application installation.
2. Drag and drop the application installer from your local desktop to the VDI.
3. In the VDI, open the **Storage** network location. Your application installer is inside.
4. Install the application.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/5wNaJnB3TAuHjh9omKyB_applications-installandpublish-1.png",
        "applications-installandpublish-1.png",
        "2542",
        "1366",
        "#4876a0",
        ""
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Network Error: \"Windows cannot access [...]\"",
  "body": "If you cannot install the application because this message appears in your VDI, it is a permission related problem.\nHowever, do not worry, we have a solution! Simply drag and drop your installer from the \"Storage\" network location to your VDI desktop. You can now install the application!"
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You have successfully installed your application!"
}
[/block]
5. Once the application is installed, click ":fa-circle: **Recording**" again to end the application recording. Your application starts being packaged.
6. Once your application has been packaged, a pop-up message appears. Rename the application.
7. Click the **Submit** button.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/EGnSKqHQxSkVbgdEIZxD_applications-installandpublish-2.png",
        "applications-installandpublish-2.png",
        "2542",
        "1366",
        "#217ebe",
        ""
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "Your application is published!",
  "body": "You can close the VDI and go back to the web interface. Your application is now listed in the list of applications."
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/ZBsNJLRTkaedP12cj635_applications-installandpublish-3.png",
        "applications-installandpublish-3.png",
        "2542",
        "1366",
        "#046cb4",
        ""
      ]
    }
  ]
}
[/block]