input/v2.0.0/applications/install-and-publish-an-application.md
---
title: "Install and publish an application"
excerpt: ""
---
[block:callout]
{
  "type": "danger",
  "title": "This feature is only available for administrators!"
}
[/block]
1. [Launch the VDI](doc:launch-the-virtual-desktop-vdi).
2. Drag and drop the application installer from your local desktop to the VDI.
3. In the VDI, open the **Storage** network location. Your application installer is inside.
4. Install the application.
[block:callout]
{
  "type": "info",
  "title": "Network Error: \"Windows cannot access [...]\"",
  "body": "If you cannot install the application because this message appears in your VDI, it is a permission related problem.\nHowever, do not worry, we have a solution! Simply drag and drop your installer from the \"Storage\" network location to your VDI desktop. You can now install the application!"
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/03a7cc6-applications-installation-2.0.0.png",
        "applications-installation-2.0.0.png",
        2544,
        1356,
        "#e7e9eb"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You have successfully installed your application!"
}
[/block]
5. Once the application is installed, click :fa-plus-circle: **Onboard an application** to publish it.
6. Choose whether you want to save an image of the VDI or not. If you do so, wait a couple of minutes.
7. A window appears on the right of the VDI. Browse through the files to find the application you just installed.
8. Click the **Publish it!** button.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/ec83513-applications-fileexplorer-2.0.0.png",
        "applications-fileexplorer-2.0.0.png",
        2546,
        1354,
        "#606667"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "Your application is published!",
  "body": "You can close the VDI and go back to the web interface. Your application is now listed in the list of applications."
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/fb2959a-applications-list-2.0.0.png",
        "applications-list-2.0.0.png",
        2550,
        1356,
        "#046cb4"
      ]
    }
  ]
}
[/block]